--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,29 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
+		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/icons/apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/icons/apple-touch-icon-114x114.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/icons/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/icons/apple-touch-icon-144x144.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/icons/apple-touch-icon-60x60.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/icons/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/icons/apple-touch-icon-76x76.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/icons/apple-touch-icon-152x152.png" />
+		<link rel="icon" type="image/png" href="assets/icons/favicon-196x196.png" sizes="196x196" />
+		<link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/png" href="assets/icons/favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="assets/icons/favicon-16x16.png" sizes="16x16" />
+		<link rel="icon" type="image/png" href="assets/icons/favicon-128.png" sizes="128x128" />
+		<meta name="application-name" content="Los Angeles Ends"/>
+		<meta name="msapplication-TileColor" content="#FFE6C2" />
+		<meta name="msapplication-TileImage" content="assets/icons/mstile-144x144.png" />
+		<meta name="msapplication-square70x70logo" content="assets/icons/mstile-70x70.png" />
+		<meta name="msapplication-square150x150logo" content="assets/icons/mstile-150x150.png" />
+		<meta name="msapplication-wide310x150logo" content="assets/icons/mstile-310x150.png" />
+		<meta name="msapplication-square310x310logo" content="assets/icons/mstile-310x310.png" />
+
 		<!-- We have to load the soundcloud SDK this way, unfortunately -->
 		<script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenLite.min.js" charset="utf-8"></script>
