Add OpenGraph image and tags

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,11 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta property="og:title" content="Los Angeles Ends">
+		<meta property="og:author" content="Simulcast">
+		<meta property="og:description" content="A record of grief, freeways, and returning home.">
+		<meta property="og:url" content="http://losangelesends.com">
+		<meta property="og:image" content="assets/og-image.png">
 
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/icons/apple-touch-icon-57x57.png" />
