--- a/src/template.html
+++ b/src/template.html
@@ -37,6 +37,7 @@
 		<!-- We have to load the soundcloud SDK this way, unfortunately -->
 		<script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenLite.min.js" charset="utf-8"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/easing/EasePack.min.js" charset="utf-8"></script>
 
 		<% if (htmlWebpackPlugin.options.manifest.theme_color) { %>
 			<meta name="theme-color" content="<%= htmlWebpackPlugin.options.manifest.theme_color %>">
