Add twitter meta tags

--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,19 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:creator" content="@simulcast__">
+		<meta name="twitter:site" content="@simulcast__">
+		<meta name="twitter:title" content="Los Angeles Ends">
+		<meta name="twitter:description" content="a hypertext record by Simulcast.">
+		<meta name="twitter:image" content="https://losangelesends.com/assets/og-image2.png">
+
 		<meta property="og:title" content="Los Angeles Ends">
 		<meta property="og:author" content="Simulcast">
 		<meta property="og:description" content="a hypertext record by Simulcast.">
 		<meta property="og:url" content="http://losangelesends.com">
-		<meta property="og:image" content="assets/og-image.png">
+		<meta property="og:image" content="assets/og-image2.png">
 
 		<link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>manifest.json">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/icons/apple-touch-icon-57x57.png" />
